--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body{
+  background-color: #191e21;
+}
+  </style>
   <title>Document</title>
 </head>
 <body>
-  
+  Hello World
 </body>
 </html>
